# garagem-django

./: .gitignore  README.md  db.sqlite3  pyproject.toml
config/: settings.py  urls.py
garagem/: admin.py  models.py  serializers.py  views.py
garagem/migrations/: 0001_initial.py  0002_categoria.py  0003_acessorio_cor.py  0004_veiculo.py  0005_alter_veiculo_ano.py  0006_alter_acessorio_options_alter_cor_options.py  0007_alter_veiculo_preco.py  0008_veiculo_acessorio.py
tests/: test_models.py
