[project]
name = "garagem"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "BlackVSK", email = "phrod2007@gmail.com"},
]
dependencies = ["django>=5.2.1", "djangorestframework>=3.16.0", "pytest>=8.3.5"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-django>=4.11.1",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = "tests/test_*.py"
[tool.pdm]
distribution = false

